increase README and simplify